// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render default button 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<button
    class="ant-btn ant-btn-default c0"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button should render primary button 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<button
    class="ant-btn ant-btn-primary c0"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button should render secondary button 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<button
    class="ant-btn ant-btn-primary c0"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`DisabledButton should render disabled button with tooltip 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<span
    class="ant-tooltip-open"
    style="cursor: not-allowed;"
  >
    <button
      class="ant-btn ant-btn-default c0"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`DisabledButton should render disabled button without 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<span
    style="cursor: not-allowed;"
  >
    <button
      class="ant-btn ant-btn-default c0"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </span>
</DocumentFragment>
`;
